@@ -23,6 +23,7 @@
 17-Mar-2019  - V0.27 Return HTTP response codes in UrlRequestUtil() methods.
 24-Mar-2019  - V0.28 Suppress error message on missing validation report file.
 25-Mar-2019  - V0.29 Expose comment processing for csv/tdd files as keyword argument
+ 2-Apr-2019  - V0.30 Add comment option and compression handling to __deserializeList()
 #
 
 
